--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "NIP98 basic client",
   "version": "1.0.0",
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,7 +11,10 @@
   "license": "MIT",
   "description": "Just a basic nip98 remote auth to hivetalk ",
   "dependencies": {
+    "@noble/secp256k1": "^2.1.0",
     "@picocss/pico": "^2.0.6",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.21.1"
   }
 }
